[gd_scene load_steps=4 format=3 uid="uid://b5hw3gj3aqj6h"]

[ext_resource type="Script" uid="uid://bs5jxg8t4f71p" path="res://patient/patient_background.gd" id="1_dh73m"]
[ext_resource type="Texture2D" uid="uid://cecdes3xpo374" path="res://art/AC.png" id="1_jm88u"]
[ext_resource type="StyleBox" uid="uid://c8rj7lcbx1dhg" path="res://styles/patient_background.tres" id="2_5co35"]

[node name="PatientBackground" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dh73m")

[node name="bg" type="Panel" parent="."]
z_index = 2
layout_mode = 0
offset_right = 576.0
offset_bottom = 889.0
theme_override_styles/panel = ExtResource("2_5co35")

[node name="PT_photo" type="TextureRect" parent="bg"]
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 274.0
texture = ExtResource("1_jm88u")

[node name="Case_data" type="RichTextLabel" parent="bg"]
layout_mode = 0
offset_left = 14.0
offset_top = 278.0
offset_right = 564.0
offset_bottom = 865.0
theme_override_colors/default_color = Color(0, 0, 0, 1)

[node name="Pt_data" type="Label" parent="bg"]
layout_mode = 0
offset_left = 191.0
offset_top = 19.0
offset_right = 231.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="LogContainer" type="VBoxContainer" parent="bg"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
